--- a/Report/references.bib
+++ b/Report/references.bib
@@ -16,3 +16,10 @@
     institution  = "{Pakistan Bureau of Statistics, Government of Pakistan}",
     address      = {Islamabad, Pakistan},
 }
+
+@misc{bib3,
+  author       = {Asian Development Bank},
+  title        = {Proposed Multitranche Financing Facility: Second Power Distribution Enhancement Investment Program (Project Data Sheet)},
+  howpublished = {\url{https://www.adb.org/sites/default/files/linked-documents/46538-002-efa.pdf}},
+  note         = {Accessed: 26-Sep-2024}
+}
